--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -407,6 +407,7 @@
     <string name="quran_read">القرآن الكريم (قراءة)</string>
     <string name="try_again">اعادة المحاولة 🤔</string>
     <string name="no_internet_connection">يبدو أن اتصالك بالإنترنت غير متوفر حاليًا 😥. من فضلك تأكد من تفعيل شبكة الواي فاي أو بيانات الهاتف، ثم أعد فتح التطبيق مرة أخرى للاستمتاع بكامل الميزات 🌸.</string>
+    <string name="show_notifications">عرض الإشعارات</string>
 
 
 
